...
                    controller.detach(editor)
                    editor.dispose()
                },
                modifier = Modifier
                    .fillMaxWidth()
                    .weight(1f)
                    .testTag("full-text-editor")
                    .semantics {
                        requestFocus {
                            controller.requestFocus()
                            true
                        }
                        setText { replacementText ->
...
